--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "valibot": "^0.17.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -24,10 +25,13 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.0.6",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
