--- a/web/package.json
+++ b/web/package.json
@@ -1,39 +1,26 @@
 {
-  "name": "web",
-  "version": "0.0.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "pinia": "^2.1.6",
-    "valibot": "^0.17.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "build": "nuxt generate",
+    "dev": "nuxt dev --port 4321",
+    "dev:tunnel": "nuxt dev --tunnel --port 4321",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.{js,vue,json,md}\"",
+    "format:check": "prettier --ignore-path .gitignore --check \"**/*.{js,vue,json,md}\""
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.17.17",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.0.6",
-    "postcss": "^8.4.30",
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/google-fonts": "^3.0.2",
+    "@pinia/nuxt": "^0.4.11",
+    "daisyui": "latest",
+    "nuxt": "^3.7.4",
+    "nuxt-lucide-icons": "^1.0.2",
+    "pinia": "^2.1.6",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.2.0",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.11"
+    "valibot": "^0.17.1"
   }
 }
