--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@pinia/nuxt": "^0.4.11",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/vue-query": "^4.35.6",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
