--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,13 @@
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.7.4",
     "nuxt-icon": "^0.5.0",
+    "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "valibot": "^0.17.1"
+    "valibot": "^0.17.1",
+    "vue": "^3.3.4"
   },
   "private": true,
   "scripts": {
